--- a/hackernews/package.json
+++ b/hackernews/package.json
@@ -2,7 +2,7 @@
   "name": "hackernews",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jakescudder.github.io/RTS-Labs-React-Redux",
+  "homepage": "https://jakescudder.github.io/Hacker-News-React-Redux",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
